﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-11-16 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_links.php: missing menu tabs

2005-11-16 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * added missing themes/darkblue_orange/img/error.ico
    * themes/darkblue_orange/css/theme_right.css.php
      - wrong error.ico
    * themes/*/img/tbl_error.png, themes/original/img/tbl_*, themes/*/img/dot_*,
      themes/*/img/frm_linevrlt.png
      - removed

2005-11-15 Michal Čihař  <michal@cihar.com>
    * css/phpmyadmin.css.php: Do not use common header file, as there is
      nothing common at all.
    * libraries/header_http.inc.php: Allways send text/html content type.
    * libraries/db_table_exists.lib.php, libraries/header_http.inc.php,
      transformation_wrapper.php: Use define rather than variable for
      conditional paths.
    * libraries/display_create_database.lib.php: Add label for create database
      input.

2005-11-14 Michal Čihař  <michal@cihar.com>
    * libraries/sql_query_form.lib.php: Fix %f expansion (bug #1355776).

2005-11-14 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * themes/*/css/theme_right.css.php, css/phpmyadmin.css.php:
      bug #1342683 Wrong URL to error.ico
    * libraries/tooltip.js::pmaTooltip():
      - no return value (not always returns a value)
      - additional check
      - undefined variable docY
    * libraries/left_header.inc.php
      - added class icon
    * display_tbl.lib.php, libraries/display_tbl_links.lib.php:
      - added class icon to images
      - fixed select all rows
      - removed arrow_ltr/rtl.png for vertical display
      - cleaned up php code and html output
    * css/phpmyadmin.css.php:
      - removed space arround form elements

2005-11-13 Michal Čihař  <michal@cihar.com>
    * Documentation.html, config.default.php, main.php, server_links.inc.php,