@@ -54,25 +54,21 @@ if ( $GLOBALS['cfg']['LeftDisplayLogo'] ) {
                 .'</a>' . "\n";
         } // end if ($GLOBALS['cfg']['Server']['auth_type'] != 'config'
 
-        if ( $GLOBALS['cfg']['QueryFrame'] ) {
-            $anchor = 'querywindow.php?' . PMA_generate_common_url( $db, $table );
+        $anchor = 'querywindow.php?' . PMA_generate_common_url( $db, $table );
             
-            if ($GLOBALS['cfg']['MainPageIconic']) {
-                $query_frame_link_text = 
-                    '<img class="icon" src="' . $pmaThemeImage . 'b_selboard.png"'
-                    .' width="16" height="16" alt="' . $strQueryFrame . '" />';
-            } else {
-                echo '<br />' . "\n";
-                $query_frame_link_text = $strQueryFrame;
-            }
+        if ($GLOBALS['cfg']['MainPageIconic']) {
+            $query_frame_link_text = 
+                '<img class="icon" src="' . $pmaThemeImage . 'b_selboard.png"'
+                .' width="16" height="16" alt="' . $strQueryFrame . '" />';
+        } else {
+            echo '<br />' . "\n";
+            $query_frame_link_text = $strQueryFrame;
+        }
         echo '<a href="' . $anchor . '&amp;no_js=true"'
             .' title="' . $strQueryFrame . '"';
-        if ( $GLOBALS['cfg']['QueryFrameJS'] ) {
-            echo ' onclick="javascript:window.parent.open_querywindow();'
-                .' return false;"';
-        }
+        echo ' onclick="javascript:window.parent.open_querywindow();'
+            .' return false;"';
         echo '>' . $query_frame_link_text . '</a>' . "\n";
-        } // end if ($GLOBALS['cfg']['QueryFrame'])
     } // end if ($server != 0)
 
 if ($GLOBALS['cfg']['MainPageIconic']) {
